# byc_odoo_migrator

./: .gitignore  LICENSE  Makefile  README.md  cnf.env  pyproject.toml  requirements.txt  xomg.py
.github/workflows/: CONTRIBUTING.md  ci.yaml
config/: modules_config.yaml  odoo_migration.yaml
examples/: migration_rules_example.yaml
migrations/: __init__.py
migrations/engine/: __init__.py  migration_engine.py
migrations/rules/: common_patterns.yaml  v14-v15.yaml  v15-v16.yaml  v16-v17.yaml  v17-v18.yaml  v18-v19.yaml
migrations/transformers/: base_transformer.py  javascript_transformer.py  python_transformer.py  xml_transformer.py
tests/: test_migrator.py
xomg_migration/: __init__.py  __main__.py
xomg_migration/config/: migration_config.yaml  modules_config.yaml
xomg_migration/examples/: migration_rules_example.yaml  module_config_example.yaml
xomg_migration/migrations/: __init__.py
xomg_migration/migrations/engine/: migration_engine.py  migration_report.py  migration_rule.py  migrator_engine_rule.py  rule_loader.py
xomg_migration/migrations/migration_scripts/: __init__.py  mig_130_140.py  mig_140_150.py  mig_150_160.py  mig_160_170.py  mig_170_180.py  mig_180_190.py
xomg_migration/migrations/rules/: common_patterns.yaml  v130-v140.yaml  v140-v150.yaml  v150-v160.yaml  v160-v170.yaml  v170-v180.yaml  v180-v190.yaml
xomg_migration/migrations/transformers/: __init__.py  addons_mig.py  base_transformer.py  constants.py  exception.py  javascript_transformer.py  python_transformer.py  sql_transformer.py  (+2 more)
xomg_migration/tests/: test_migrator.py
