[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mig-upgrade-odoo"
# version = "1.0.0"
dynamic = ["version"]
dependencies = ['argcomplete', 'colorama', 'lxml', 'pyyaml', 'requests']
description = "odoo migration library"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Roberto Saavedra", email = "robertsvx@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ['Odoo Bolivia', 'Odoo', 'Migration', 'Upgrade', 'Module']

[project.scripts]
xomg = "xomg_migration.__main__:main"
odoo_migration = "xomg_migration.__main__:main"

